# simple-bank-transaction-manager

./: .gitignore  README.md  pyproject.toml
.github/workflows/: coveralls.yml
TransactionManager/: Account.py  AccountManager.py  Client.py  ClientFrameAdmin.py  ClientFrameMain.py  ClientTransactionViewer.py  Console.py  Directory.py  FileHelper.py  FrameAdmin.py  FrameMain.py  PageAdmin.py  PageHome.py  PieChart.py  TransactionViewer.py  WidgetHelper.py  main.py  report_generator.py  transaction.py  utils.py
TransactionManager/Account/: AccountDirectory.py  AccountManager.py
TransactionManager/Category/: Category.py
TransactionManager/Client/: Client.py  ClientDialog.py  ClientNavigator.py  ClientPage.py  FrameAdmin.py  FrameMain.py
TransactionManager/UserInterface/: TkInterface.py
src/: categorizer.py  csv_reader.py  main.py
src/tests/: test_bank_statement_generator.py  test_categorizer.py  test_read_csv  test_read_csv.py  test_report_generator.py  test_transaction_initialization.py
src/tests/test_data/: mock_bank_statement.csv
src/tests/utils/: create_mock_bank_statement.py
tests/: __init__.py  test_FileHelper.py  test_categorizer.py  test_client.py  test_client_admin.py  test_client_main.py  test_directory.py  test_main.py  test_read_csv.py  test_report_generator.py  test_transaction_initialization.py  test_utils.py
tests/test_data/accounts/Test Bank Account Name/categorization/: categories.csv
tests/utils/: create_mock_bank_statement.py
user_data/categorization/rules/: mock_cateogorization_rules.csv
(+2 files in other folders)
