[tool.poetry]
name = "simple-bank-transaction-manager"
version = "0.1.0"
description = "A lightweight Python library for categorizing bank transactions and performing other common operations surrounding financial analysis and reporting."

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
