[tool.poetry]
name = "simple-bank-transaction-manager"
version = "0.1.0"
description = "A lightweight Python library for categorizing bank transactions and performing other common operations surrounding financial analysis and reporting."
authors = ["Zach Huberty <me@zachhuberty.com>"] 

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
faker = "^19.6.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
auto-py-to-exe = "^2.40.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
